--- a/estilo.css
+++ b/estilo.css
@@ -1,13 +1,131 @@
+html {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
+    background-color: #fff;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 9999;
+    display: block;
+    margin: 0;
+    width: 100%;
+    height: 48px;
+    max-height: 44px;
+    background: #333;
+    background: rgba(0, 0, 0, 0.8);
+    font-size: 17px;
+    color: #fff;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+}
+
 body {
-      font: 400 15px Tahoma, sans-serif;/*Familia sans-serif*/
       line-height: 1.8;
-      color: #818181;
-      background-color: #f6f6f6
+      color: #000;
   }
+
+body > div:first-of-type {
+  position: relative;
+  overflow: hidden;
+  height: 580px;
+  background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/gfc%40full.tif");
+  background-size: contain;
+  color: white;
+}
+
+body > div:nth-child(3) {
+  margin-top: -5px;
+}
+
+body > div:nth-child(3) > ul {
+  -webkit-padding-start: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+body > div:nth-child(3) > ul > li {
+  list-style-type: none;
+  text-align: center;
+  background-color: #fafafa;
+  margin-bottom: 10px;
+  height: 100px;
+
+  text-align: center;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+body > div:nth-child(3) > ul > li > a {
+  text-decoration: none;
+  color: #0070c9;
+  font-size: 1.5em;
+  font-weight: 300;
+  position: absolute;
+  padding-top: 25px;
+  margin-left: -30px;
+}
+
+body > div:nth-child(3) > ul > li > a:hover {
+  text-decoration: underline;
+}
+
+body > div:first-of-type > h2 {
+  text-align: center;
+  font-size: 2.5em;
+  line-height: 1;
+  margin-top: 250px;
+}
+
+body > div:first-of-type > p {
+  text-align: center;
+  font-style: italic;
+  line-height: 0;
+}
+
+header > nav {
+  text-align: center;
+  margin-top: 6px;
+  width: 100%;
+}
+
+header > nav > a {
+    font-size: 17px;
+    font-weight: lighter;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+
+header > nav > a:hover {
+    opacity: .65;
+  }
+
+  header > nav > a:active {
+      opacity: .65;
+    }
+
 h1 {
       background-color:#0070c9;
       color: #fff;
       text-transform: uppercase;
       padding: 100px 25px;
       text-align: center;
+  }
+
+  body > div:nth-child(3) > ul > li > a:after {
+    content: ">";
+    padding-left: 10;
+    text-decoration: none !important;
   }
