--- a/estilo.css
+++ b/estilo.css
@@ -18,10 +18,6 @@ header {
     background: rgba(0, 0, 0, 0.8);
     font-size: 17px;
     color: #fff;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     -webkit-backdrop-filter: saturate(180%) blur(20px);
     backdrop-filter: saturate(180%) blur(20px);
 }
@@ -137,6 +133,6 @@ h1 {
 
   body > div:nth-child(3) > ul > li > a:after {
     content: ">";
-    padding-left: 10;
+    padding-left: 10px;
     text-decoration: none !important;
   }
