--- a/estilo.css
+++ b/estilo.css
@@ -122,7 +122,7 @@ header > nav > a:hover {
     opacity: .65;
 }
 
-header > nav > a[href='/~UO236856']{
+header > nav > a.current{
     opacity: .65;
     cursor: default;
 }
@@ -140,3 +140,35 @@ h1 {
     padding-left: 10px;
     text-decoration: none !important;
   }
+
+  .submenu {
+    margin-top: 44px;
+    background-color: #2d2d2d;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    height: 88px
+    overflow-x: auto;
+    overflow-y: hidden;
+    display: block;
+  }
+
+  .submenu > a {
+    color: white;
+    font-size: 40px;
+    line-height: 2.1;
+    font-weight: 200;
+    letter-spacing: -.01em;
+    font-family: "SF Text";
+    text-decoration: none;
+    margin-left: 3%;
+    margin-right: 3%;
+    display: inline-block;
+    vertical-align: middle;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    }
+
+    .submenu > a:hover {
+      color: #6bf
+    }
