--- a/estilo.css
+++ b/estilo.css
@@ -16,10 +16,10 @@ header {
     max-height: 44px;
     background: #333;
     background: rgba(0, 0, 0, 0.8);
-    font-size: 14px;
+    font-size: 15px;
     line-height: 2.1;
-    font-weight: 500;
-    letter-spacing: -.01em;
+    font-weight: 400;
+    letter-spacing: -0.01em;
     font-family: "SF Text";
     color: #fff;
     -webkit-backdrop-filter: saturate(180%) blur(20px);
@@ -104,18 +104,19 @@ body > div:first-of-type > p {
 
 header > nav {
   text-align: center;
-  margin-top: 6px;
+  margin-top: 4px;
   width: 100%;
 }
 
 header > nav > a {
-    /*font-size: 17px;
-    font-weight: lighter;*/
+    font-size: 17px;
     text-align: center;
     color: white;
     text-decoration: none;
     margin-left: 3%;
     margin-right: 3%;
+    display: inline-block;
+    position: relative;
   }
 
 header > nav > a:hover {
@@ -166,9 +167,7 @@ h1 {
     margin-left: 3%;
     margin-right: 3%;
     display: inline-block;
-    vertical-align: middle;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin-bottom: 30px
     }
 
     .submenu > a:hover {
@@ -252,4 +251,50 @@ h1 {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
+    }
+
+    .html-cat:after {
+      content: 'HTML';
+      font-size: 12px;
+      line-height: 0;
+      font-weight: 200;
+      letter-spacing: 0.2em;
+      font-family: "SF Text", sans-serif;
+      color: #f46c0e;
+      display: block;
+      position: absolute;
+      padding-left: 3px;
+    }
+
+    .xml-cat:after {
+      content: 'XML';
+      font-size: 12px;
+      line-height: 0;
+      font-weight: 200;
+      letter-spacing: 0.2em;
+      font-family: "SF Text", sans-serif;
+      color: #f46c0e;
+      display: block;
+      position: absolute;
+      padding-left:7px;
+    }
+
+    .cat:after {
+      font-size: 12px;
+      line-height: 0;
+      font-weight: 200;
+      letter-spacing: 0.2em;
+      font-family: "SF Text", sans-serif;
+      color: #f46c0e;
+      display: block;
+      position: absolute;
+      padding-left:7px;
+    }
+
+    .error-title {
+      position: absolute;
+      margin-top: 200px;
+      text-align: center;
+      width: 100%;
+      font-size: 40px;
     }
