--- a/SEW/P5/style.css
+++ b/SEW/P5/style.css
@@ -1,8 +1,10 @@
+/*0001*/
 html {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
+    font-family: "SF Display", -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
+    font-weight: 200;
     background-color: #fff;
 }
-
+/*0001*/
 header {
     position: fixed;
     top: 0;
@@ -27,57 +29,69 @@ header {
     backdrop-filter: saturate(180%) blur(20px);
 }
 
+/*0012*/
 header > h1:first-of-type {
   font-size: 17px;
-  font-weight: lighter;
+  font-weight: 400;
   text-align: center;
 }
 
+/*0001*/
 body {
   width: 1024px;
   margin-left: auto;
   margin-right: auto;
 }
 
+/*0003*/
 p, ul, a {
-  font-size: 0.9em;
-  font-weight: 400;
+  line-height: 22px;
+  font-size: 17px;
+  font-weight: 200;
   text-align: justify;
   line-height: 22px;
 }
 
+/*0012*/
 body > p:first-of-type {
   margin-top: 60px;
 }
 
+/*0001*/
 table {
   width: 100%;
 }
 
+/*0002*/
 table, td {
   font-style: normal;
   font-weight: 400;
   font-size: 0.9em;
 }
 
+/*0002*/
 td, th {
    border-bottom: 1px solid #ddd;
 }
 
+/*0001*/
 a {
   color: #0070c9;
   text-decoration: none;
   line-height: 10px;
 }
 
+/*0011*/
 a:hover {
   text-decoration: underline;
 }
 
+/*0011*/
 a:after {
   content:" >";
 }
 
+/*0011*/
 a: any-link {
   color: -webkit-link;
   text-decoration: underline;
