--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 html {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
+    font-family: "SF Text", -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
     background-color: #fff;
 }
 
