--- a/estilo.css
+++ b/estilo.css
@@ -1,42 +1,42 @@
 html {
-    font-family: "SF Text", -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
-    background-color: #fff;
+  font-family: "SF Text", -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
+  background-color: #fff;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 9999;
-    display: block;
-    margin: 0;
-    width: 100%;
-    height: 48px;
-    max-height: 44px;
-    background: #333;
-    background: rgba(0, 0, 0, 0.8);
-    font-size: 15px;
-    line-height: 2.1;
-    font-weight: 400;
-    letter-spacing: -0.01em;
-    font-family: "SF Text";
-    color: #fff;
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 9999;
+  display: block;
+  margin: 0;
+  width: 100%;
+  height: 48px;
+  max-height: 44px;
+  background: #333;
+  background: rgba(0, 0, 0, 0.8);
+  font-size: 15px;
+  line-height: 2.1;
+  font-weight: 400;
+  letter-spacing: -0.01em;
+  font-family: "SF Text";
+  color: #fff;
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
 }
 
 body {
-      line-height: 1.8;
-      color: #000;
-      display: block;
-      display: block;
-      margin-top: 0px;
-      margin-right: 0px;
-      margin-bottom: 0px;
-      margin-left: 0px;
-  }
+  line-height: 1.8;
+  color: #000;
+  display: block;
+  display: block;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+}
 
-body > div:first-of-type {
+body>div:first-of-type {
   position: relative;
   overflow: hidden;
   height: 580px;
@@ -48,34 +48,33 @@ body > div:first-of-type {
   margin-bottom: 65px;
 }
 
-body > div:nth-child(3) {
+body>div:nth-child(3) {
   margin-top: -5px;
   margin-right: 10px;
   margin-left: 10px;
 }
 
-body > div:nth-child(3) > ul {
+body>div:nth-child(3)>ul {
   -webkit-padding-start: 0px;
   padding-right: 0px;
   padding-left: 0px;
 }
 
-body > div:nth-child(3) > ul > li {
+body>div:nth-child(3)>ul>li {
   list-style-type: none;
   text-align: center;
   background-color: #fafafa;
   margin-bottom: 10px;
   height: 100px;
-
   text-align: center;
-    position: relative;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
-body > div:nth-child(3) > ul > li > a {
+body>div:nth-child(3)>ul>li>a {
   text-decoration: none;
   color: #0070c9;
   font-size: 1.5em;
@@ -85,225 +84,215 @@ body > div:nth-child(3) > ul > li > a {
   margin-left: -75px;
 }
 
-body > div:nth-child(3) > ul > li > a:hover {
+body>div:nth-child(3)>ul>li>a:hover {
   text-decoration: underline;
 }
 
-body > div:first-of-type > h2 {
+body>div:first-of-type>h2 {
   text-align: center;
   font-size: 2.5em;
   line-height: 1;
   margin-top: 250px;
 }
 
-body > div:first-of-type > p {
+body>div:first-of-type>p {
   text-align: center;
   font-style: italic;
   line-height: 0;
 }
 
-header > nav {
+header>nav {
   text-align: center;
   margin-top: 4px;
   width: 100%;
 }
 
-header > nav > a {
-    font-size: 17px;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    margin-left: 3%;
-    margin-right: 3%;
-    display: inline-block;
-    position: relative;
-  }
-
-header > nav > a:hover {
-    opacity: .65;
+header>nav>a {
+  font-size: 17px;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  margin-left: 3%;
+  margin-right: 3%;
+  display: inline-block;
+  position: relative;
 }
 
-header > nav > a.current{
-    opacity: .65;
-    cursor: default;
+header>nav>a:hover {
+  opacity: .65;
+}
+
+header>nav>a.current {
+  opacity: .65;
+  cursor: default;
 }
 
 h1 {
-      background-color:#0070c9;
-      color: #fff;
-      text-transform: uppercase;
-      padding: 100px 25px;
-      text-align: center;
-  }
+  background-color: #0070c9;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 100px 25px;
+  text-align: center;
+}
 
-  body > div:nth-child(3) > ul > li > a:after {
-    content: ">";
-    padding-left: 10px;
-    text-decoration: none !important;
-  }
+body>div:nth-child(3)>ul>li>a:after {
+  content: ">";
+  padding-left: 10px;
+  text-decoration: none !important;
+}
 
-  .submenu {
-    margin-top: 44px;
-    background-color: #2d2d2d;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    height: 88px
-    overflow-x: auto;
-    overflow-y: hidden;
-    display: block;
-    position: fixed;
-    width: 100%;
-  }
+.submenu {
+  margin-top: 44px;
+  background-color: #2d2d2d;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  height: 88px overflow-x: auto;
+  overflow-y: hidden;
+  display: block;
+  position: fixed;
+  width: 100%;
+}
 
-  .submenu > a {
-    color: white;
-    font-size: 40px;
-    line-height: 2.1;
-    font-weight: 200;
-    letter-spacing: -.01em;
-    font-family: "SF Text";
-    text-decoration: none;
-    margin-left: 3%;
-    margin-right: 3%;
-    display: inline-block;
-    margin-bottom: 30px
-    }
+.submenu>a {
+  color: white;
+  font-size: 40px;
+  line-height: 2.1;
+  font-weight: 200;
+  letter-spacing: -.01em;
+  font-family: "SF Text";
+  text-decoration: none;
+  margin-left: 3%;
+  margin-right: 3%;
+  display: inline-block;
+  margin-bottom: 30px
+}
 
-    .submenu > a:hover {
-      color: #6bf
-    }
+.submenu>a:hover {
+  color: #6bf
+}
 
-    .aficiones {
-      margin-top: 50px;
+.aficiones {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  width: 100%;
+  position: relative;
+  list-style-type: none;
+  padding-left: 5px;
+  padding-right: 5px;
+}
 
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: row;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      box-sizing: border-box;
-      width: 100%;
-      position: relative;
-      list-style-type: none;
-      padding-left: 5px;
-      padding-right: 5px;
-    }
+.aficion {
+  border-top-width: 12px;
+  height: 598px;
+  width: 50%;
+  box-sizing: border-box;
+  border: 6px solid #fff;
+  background-color: #fafafa;
+  height: 592px;
+}
 
-    .aficion {
-      border-top-width: 12px;
-      height: 598px;
-      width: 50%;
-      box-sizing: border-box;
-      border: 6px solid #fff;
-      background-color: #fafafa;
-      height: 592px;
-    }
+.aficion>p {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  /*text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);*/
+}
 
-    .aficion > p {
-      color: white;
-      text-align: center;
-      /*text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);*/
-    }
+.aficion>p:first-of-type {
+  font-size: 70px;
+  font-weight: 500;
+  line-height: 0px;
+  padding-top: 160px;
+}
 
-    .aficion > p:first-of-type {
-      font-size: 70px;
-      font-weight: 500;
-      line-height: 0px;
-      padding-top: 160px;
-    }
+.aficion>p:nth-child(2) {
+  padding-left: 25px;
+  padding-right: 25px;
+}
 
-    .aficion > p:nth-child(2) {
-      padding-left: 25px;
-      padding-right: 25px;
-    }
+.aficion:nth-child(1) {
+  background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/festival.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
-    .aficion:nth-child(1) {
-      background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/festival.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
+.aficion:nth-child(2) {
+  background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/ski-white.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
-    .aficion:nth-child(2){
-      background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/ski-white.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
+.aficion:nth-child(3) {
+  background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/run.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
-    .aficion:nth-child(3){
-      background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/run.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
+.aficion:nth-child(4) {
+  background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/swim.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
-    .aficion:nth-child(4){
-      background-image: url("https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/swim.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
+.html-cat:after {
+  content: 'HTML';
+  font-size: 12px;
+  line-height: 0;
+  font-weight: 200;
+  letter-spacing: 0.2em;
+  font-family: "SF Text", sans-serif;
+  color: #f46c0e;
+  display: block;
+  position: absolute;
+  padding-left: 3px;
+}
 
-    .html-cat:after {
-      content: 'HTML';
-      font-size: 12px;
-      line-height: 0;
-      font-weight: 200;
-      letter-spacing: 0.2em;
-      font-family: "SF Text", sans-serif;
-      color: #f46c0e;
-      display: block;
-      position: absolute;
-      padding-left: 3px;
-    }
+.xml-cat:after {
+  content: 'XML';
+  font-size: 12px;
+  line-height: 0;
+  font-weight: 200;
+  letter-spacing: 0.2em;
+  font-family: "SF Text", sans-serif;
+  color: #f46c0e;
+  display: block;
+  position: absolute;
+  padding-left: 7px;
+}
 
-    .xml-cat {
-      cursor: not-allowed;
-      opacity: .65;
-    }
+.cat:after {
+  font-size: 12px;
+  line-height: 0;
+  font-weight: 200;
+  letter-spacing: 0.2em;
+  font-family: "SF Text", sans-serif;
+  color: #f46c0e;
+  display: block;
+  position: absolute;
+  padding-left: 7px;
+}
 
-    .xml-cat:hover {
-      color: white !important;
-    }
-
-    .xml-cat:after {
-      content: 'XML';
-      font-size: 12px;
-      line-height: 0;
-      font-weight: 200;
-      letter-spacing: 0.2em;
-      font-family: "SF Text", sans-serif;
-      color: #f46c0e;
-      display: block;
-      position: absolute;
-      padding-left:7px;
-    }
-
-    .cat:after {
-      font-size: 12px;
-      line-height: 0;
-      font-weight: 200;
-      letter-spacing: 0.2em;
-      font-family: "SF Text", sans-serif;
-      color: #f46c0e;
-      display: block;
-      position: absolute;
-      padding-left:7px;
-    }
-
-    .error-title {
-      position: absolute;
-      margin-top: 200px;
-      text-align: center;
-      width: 100%;
-      font-size: 40px;
-    }
+.error-title {
+  position: absolute;
+  margin-top: 200px;
+  text-align: center;
+  width: 100%;
+  font-size: 40px;
+}
