--- a/SEW/P6/Ejercicio3/calculator.css
+++ b/SEW/P6/Ejercicio3/calculator.css
@@ -29,6 +29,10 @@ button {
   border-radius: 100px;
 }
 
+button:active {
+  opacity: .65;
+}
+
 .viewer {
   font-size: 1.5em;
   font-weight: 200;
