--- a/SEW/P6/Ejercicio4/style.css
+++ b/SEW/P6/Ejercicio4/style.css
@@ -1,248 +1,66 @@
-@font-face {
-    font-family: Pixel;
-    src: url('../fonts/PixelPoint.ttf');
+* {
+  padding: 0;
+  margin: 5px;
+  text-align: center;
 }
 
-@font-face {
-    font-family: Play;
-    src: url('../fonts/Play-Regular.ttf');
+body {
+  background-color: blue;
 }
 
-body,
-html {
-    margin: 0;
-    padding: 1px;
-    background: #fff;
+.calculator {
+  width: 350px;
+  height: 320px;
+  background-color: #c0c0c0;
+  box-shadow: 0px 0px 0px 10px #666;
+  border: 5px solid black;
+  border-radius: 10px;
 }
 
-#calculator {
-    width: 376px;
-    height: 519px;
-    margin: auto;
-    border: 1px solid #000000;
-    background: #3a5872;
-    box-shadow: 0px 0px 40px #000;
-    border: 2px solid #4d5368;
-    border-top-left-radius: 1em;
-    border-top-right-radius: 1em;
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
+#display {
+  width: 320px;
+  height: 40px;
+  text-align: right;
+  background-color: black;
+  border: 3px solid white;
+  font-size: 18px;
+  left: 2px;
+  top: 2px;
+  color: #7fff00;
 }
 
-.logo {
-    margin-top: 10px;
-    margin-left: 15px;
-    margin-bottom: 5px;
-    float: left;
-    font-style: bold;
-    font-weight: 700;
-    font-family: 'Play', 'Russo One', sans-serif;
-    font-size: 1.4em;
-    color: #acb4c1;
-    -webkit-user-select: none;
+.btnTop {
+  color: white;
+  background-color: #6f6f6f;
+  font-size: 14px;
+  margin: auto;
+  width: 50px;
+  height: 25px;
 }
 
-.v {
-    font-size: 0.6em;
-    margin-top: 20px;
-    margin-right: 18px;
-    color: #acb4c1;
-    float: right;
-    font-family: 'Play', 'Russo One', sans-serif;
-    -webkit-user-select: none;
+.btnNum {
+  color: white;
+  background-color: black;
+  font-size: 14px;
+  margin: auto;
+  width: 50px;
+  height: 25px;
 }
 
-.raad {
-    font-size: 0.7em;
-    margin-top: 3px;
-    margin-right: 22px;
-    color: #acb4c1;
-    float: right;
-    font-family: 'Play', 'Russo One', sans-serif;
+.btnMath {
+  color: white;
+  background-color: #ff4561;
+  font-size: 14px;
+  margin: auto;
+  width: 50px;
+  height: 25px;
 }
 
-.form-control {
-    text-align: center;
-}
-
-#display-box {
-    position: relative;
-    padding-right: 7px;
-    padding-top: 25px;
-    padding-bottom: 0px;
-    width: 350px;
-    height: 50px;
-    margin-top: 5px;
-    margin-bottom: 9px;
-    font: 30px bold;
-    font-family: "Pixel";
-    text-align: right;
-    border-radius: 5px;
-    background: #b6d1c2;
-    box-shadow: 0px 0px 40px #2b4753;
-    display: inline-block;
-}
-
-.notification {
-    position: absolute;
-    z-index: 1;
-    left: 65px;
-    top: 56px;
-    font-size: 14px;
-    font-family: "Pixel";
-}
-
-.calc-rad {
-    position: absolute;
-    padding: 2px;
-    padding-left: 5px;
-    bottom: 2px;
-    font-size: 14px;
-    line-height: 14px;
-    outline-width: 5px;
-}
-
-.calc-top {
-    margin: 7px;
-    display: inline-block;
-}
-
-.calc-left {
-    position: relative;
-}
-
-.sign {
-    position: absolute;
-    left: 39px;
-    bottom: 4px;
-    font-size: 8px;
-    font-family: inherit;
-    color: inherit;
-}
-
-.calc-down {
-    margin: 11px;
-    display: inline-block;
-}
-
-.trigo-keys {
-    width: 40px;
-    height: 27px;
-    font-size: 1em;
-    color: #fff;
-    margin: 3px;
-    cursor: pointer;
-    background: #2b4753;
-    border: 1px solid #1a2f38;
-    border-radius: 5px;
-    display: inline-block;
-    font-family: 'Play', 'Russo One', sans-serif;
-    vertical-align: middle;
-}
-
-.calc-second {
-    background-color: #222;
-    width: 40px;
-    height: 27px;
-    font-size: 1em;
-    color: #d86672;
-    margin: 3px;
-    cursor: pointer;
-    background: #2b4753;
-    border: 1px solid #1a2f38;
-    border-radius: 5px;
-    display: inline-block;
-    font-family: 'Play', 'Russo One', sans-serif;
-    vertical-align: middle;
-}
-
-.trigo-keys:hover {
-    background: #345361;
-    border: 1px solid #1a2f38;
-    border-radius: 5px;
-}
-
-.trigo-keys:active {
-    font-size: 1em;
-    color: #fff;
-    background: #2b4753;
-    border: 1px solid #000;
-    border-radius: 5px;
-}
-
-.keys {
-    padding: 0px;
-    color: #fff;
-    font-family: 'Play', 'Russo One', sans-serif;
-    font-size: 2em;
-    cursor: pointer;
-    margin: 1px;
-    width: 62px;
-    height: 50px;
-    border: 2px solid #697394;
-    border-top-left-radius: .6em;
-    border-top-right-radius: .6em;
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
-    background: #8696a5;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.keys:hover {
-    color: #fff;
-    background: #91a4b5;
-}
-
-.keys:active {
-    color: #fff;
-    background: #758492;
-    border: 2px solid #3f4969;
-}
-
-.keys2 {
-    background: #4a5f73;
-}
-
-.keys2:hover {
-    background: #52687d;
-}
-
-.keys2:active {
-    background: #425669;
-    border: 2px solid #3f4969;
-}
-
-.del-ac {
-    background: #c86e78;
-    width: 134px;
-}
-
-.del-ac:hover {
-    background: #da7d88;
-}
-
-.del-ac:active {
-    color: #fff;
-    background: #bb626c;
-    border: 2px solid #3f4969;
-}
-
-.equal {
-    width: 134px;
-    /*    background: #3f4661;*/
-}
-
-.calc-buttons {
-    display: none;
-}
-
-.calc-blank {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-    width: 0px;
-    height: 0px;
-    padding: 0px;
-    margin: 0px;
+.btnOpps {
+  color: white;
+  background-color: #ff9933;
+  font-size: 14px;
+  margin: auto;
+  width: 50px;
+  height: 25px;
 }
