--- a/SEW/P6/Ejercicio6/game.css
+++ b/SEW/P6/Ejercicio6/game.css
@@ -1,3 +1,21 @@
+html {
+  font-family: "SF Display", -apple-system, BlinkMacSystemFont, sans-serif, Helvetica, Arial;
+  background-color: #fff;
+  display: flex;
+}
+
+body {
+  font-size: 15px;
+  font-weight: 200;
+  margin: auto;
+}
+
+h1 {
+  font-size: 3em;
+  font-weight: 900;
+  padding-left: 200px;
+}
+
 canvas {
-  background: #eee;
+  background: #f6f6f6;
 }
